apps/web/src/app/theme.css
@import "@fontsource-variable/jost/wght-italic.css";

:root {
  color-scheme: light;

  --color-background-page: #FA6565;
  --color-background-card: #FEE272;
  --color-background-interstitial: #AEF4F5;
  --color-background-informational: #D8D4C4;
  --color-background-crest: rgb(245, 245, 245);
  --color-background-foremost: #FFFFFF;
  --color-background-focus-hover: hsl(48deg 99% 96%);
  --color-background-focus-active: hsl(48deg 99% 92%);
  --color-text-primary: #000000;
  --color-text-tertiary: rgb(128, 128, 128);
  --color-text-live: red;
  --color-shadow: rgba(0, 0, 0, 0.1);
}

@media (prefers-color-scheme: dark) {
  :root {
    color-scheme: dark;

    --color-background-page: #181A2A;
    --color-background-card: #D8BD4F;
    --color-background-interstitial: #286B74;
    --color-background-informational: #59564C;
    --color-background-crest: rgb(45, 47, 54);
    --color-background-foremost: #F7F3E7;
    --color-background-focus-hover: hsl(48deg 56% 24%);
    --color-background-focus-active: hsl(48deg 56% 30%);
    --color-text-primary: #080808;
    --color-text-tertiary: rgb(92, 92, 92);
    --color-text-live: #FF5A5A;
    --color-shadow: rgba(0, 0, 0, 0.28);
  }
}

/* https://www.joshwcomeau.com/css/custom-css-reset/ */
*,
*::before,
*::after {
  box-sizing: border-box;
}

* {
  margin: 0;
}

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
}

body {
  background-color: var(--color-background-page);
  display: flex;
  flex-direction: column;
  font-family: "Jost Variable", Futura, Helvetica, Arial, sans-serif;
  gap: 3rem;
  line-height: 1.5;
  margin: 0 auto;
  max-width: 40rem;
  padding: 2rem 0.75rem;
  -webkit-font-smoothing: antialiased;
}

img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}

input,
button,
textarea,
select {
  font: inherit;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
  text-wrap: balance;
}

ul,
ol {
  list-style: none;
  margin: 0;
  padding: 0;
}

fieldset {
  border: none;
  margin: 0;
  padding: 0;
}

a {
  color: inherit;
}

button {
  appearance: none;
  background: none;
  border: none;
  color: unset;
}

